Include private snmp community with write righs

--- a/files/snmp/vacm.conf
+++ b/files/snmp/vacm.conf
@@ -24,11 +24,10 @@
 %%       is regarded as all ones. null is shorthand for a mask with all ones.
 
 {vacmSecurityToGroup, v2c, "initial", "initial"}.
-{vacmSecurityToGroup, usm, "initial", "initial"}.
+{vacmSecurityToGroup, v2c, "private", "private"}.
 
 {vacmAccess, "initial", "", any, noAuthNoPriv, exact, "restricted", "", "restricted"}.
-{vacmAccess, "initial", "", usm, authNoPriv, exact, "internet", "internet", "internet"}.
-{vacmAccess, "initial", "", usm, authPriv, exact, "internet", "internet", "internet"}.
+{vacmAccess, "private", "", any, noAuthNoPriv, exact, "internet", "internet", "internet"}.
 
 {vacmViewTreeFamily, "internet", [1,3,6,1], included, null}.
 {vacmViewTreeFamily, "restricted", [1,3,6,1], included, null}.
