Set log_format env in default app.config

--- a/files/app.config
+++ b/files/app.config
@@ -11,6 +11,7 @@
    {file_log_size, 5000000},
    {file_log_rotations, 4},
    {file_log_level, info},
+   {log_format, "%j %T [%L] %l%n"},
    {console_log, true},
 
    {replies_deadline, 120}]},
