--- a/rebar.config
+++ b/rebar.config
@@ -1,6 +1,6 @@
 {erl_opts, [warnings_as_errors]}.
 
-{deps, [{just_mini, ".*", {git, "git@github.com:PowerMeMobile/just_mini.git",
+{deps, [{just_mini, ".*", {git, "git://github.com/PowerMeMobile/just_mini.git",
                            {branch, "master"}}},
         {riak_err, ".*", {git, "git://github.com/basho/riak_err",
                           {branch, "master"}}},
