Replace log4erl with lager, modify default config values

--- a/reltool.config
+++ b/reltool.config
@@ -4,12 +4,13 @@
    [kernel,
     stdlib,
     sasl,
-    riak_err,
+    lager,
     mnesia,
-    log4erl,
     snmp,
     os_mon,
     common_lib,
+    amqp_client,
+    gproc,
     just_mini]},
   {rel, "start_clean", "",
    [kernel,
@@ -29,7 +30,7 @@
 
 {overlay,
  [{mkdir, "etc"},
-  {mkdir, "data/tokyo"},
+  {mkdir, "data/gateways"},
   {mkdir, "data/snmp"},
   {mkdir, "log/sasl"},
   {mkdir, "log/smpp"},
