--- a/files/app.config
+++ b/files/app.config
@@ -6,14 +6,27 @@
    {amqp_vhost, <<"/">>},
    {amqp_host, "localhost"},
    {amqp_port, 5672},
-
+   {request_queue_prefix, "pmm.just.gateway."},
+   {response_queue, "pmm.mmwl.response.sms"},
+   {message_queue, "pmm.mmwl.incoming.sms"},
+   {receipt_queue, "pmm.mmwl.receipt.sms"},
    {file_log_dir, "{{file_log_dir}}"},
    {file_log_size, 5000000},
-   {file_log_level, info},
-   {log_format, "%j %T [%L] %l%n"},
-   {console_log, true},
-
    {replies_deadline, 120}]},
+
+ %% Lager config
+ {lager,
+  [{handlers,
+    [{lager_console_backend, info},
+     {lager_file_backend,
+      [{"log/error.log", error, 10485760, "$D0", 5},
+       {"log/console.log", info, 10485760, "$D0", 5}]}]},
+   {crash_log, "log/crash.log"},
+   {crash_log_msg_size, 65536},
+   {crash_log_size, 10485760},
+   {crash_log_date, "$D0"},
+   {crash_log_count, 5},
+   {error_logger_redirect, true}]},
 
  %% Mnesia config
  {mnesia,
@@ -26,11 +39,6 @@
    {error_logger_mf_dir, "{{sasl_log_dir}}"}, % Log directory
    {error_logger_mf_maxbytes, 10485760}, % 10 MB max file size
    {error_logger_mf_maxfiles, 5}]}, % 5 files max
-
- %% riak_err config
- {riak_err,
-  [{term_max_size, 10240}, % size limit of args combined
-   {fmt_max_bytes, 10240}]}, % size limit of a formatted term
 
  %% SNMP config
  {snmp,
