--- a/rebar.config
+++ b/rebar.config
@@ -1,6 +1,6 @@
 {erl_opts, [warnings_as_errors]}.
 
-{deps, [{just_mini, "0.*", {git, "git@github.com:PowerMeMobile/just_mini.git",
+{deps, [{just_mini, "0.*", {git, "git://github.com/PowerMeMobile/just_mini.git",
                             {branch, "master"}}},
         {entop, "0.0.1", {git, "git://github.com/mazenharake/entop.git",
                           {branch, "master"}}},
