--- a/files/app.config
+++ b/files/app.config
@@ -6,6 +6,7 @@
    {amqp_vhost, <<"/">>},
    {amqp_host, "localhost"},
    {amqp_port, 5672},
+   {amqp_qos, 1000},
    {request_queue_prefix, "pmm.just.gateway."},
    {response_queue, "pmm.mmwl.response.sms"},
    {message_queue, "pmm.mmwl.incoming.sms"},
