--- a/rebar.config
+++ b/rebar.config
@@ -1,8 +1,10 @@
-{erl_opts, [warnings_as_errors]}.
-
-{deps, [{just_mini, "0.*", {git, "git://github.com/PowerMeMobile/just_mini.git",
-                            {branch, "master"}}},
-        {entop, "0.0.1", {git, "git://github.com/mazenharake/entop.git",
-                          {branch, "master"}}},
-        {eper, ".*", {git, "git://github.com/massemanet/eper.git",
-                      {branch, "master"}}}]}.
+{erl_opts, [
+	warnings_as_errors,
+	debug_info
+]}.
+{deps, [
+	{just_mini, "0.*", {git, "git://github.com/PowerMeMobile/just_mini.git", {branch, "master"}}},
+	{entop, "0.0.1", {git, "git://github.com/mazenharake/entop.git", {branch, "master"}}},
+	{eper, ".*", {git, "git://github.com/massemanet/eper.git", {branch, "master"}}},
+	{sync, ".*", {git, "https://github.com/ten0s/sync.git", {branch, "dk_support_release"}}}
+]}.
