--- a/reltool.config
+++ b/reltool.config
@@ -1,45 +1,49 @@
-{sys,
- [{lib_dirs, ["deps"]},
-  {rel, "just", "1",
-   [kernel,
-    stdlib,
-    sasl,
-    lager,
-    mnesia,
-    snmp,
-    os_mon,
-    common_lib,
-    amqp_client,
-    gproc,
-    just_mini]},
-  {rel, "start_clean", "",
-   [kernel,
-    stdlib]},
-  {boot_rel, "just"},
-  {profile, embedded},
-  {debug_info, strip},
-  {excl_sys_filters, ["^bin/.*", "^erts.*/bin/(dialyzer|typer)"]},
-  {excl_archive_filters, [".*"]},
-  {app, cecho, [{incl_cond, include}]},
-  {app, entop, [{incl_cond, include}]},
-  {app, eper, [{incl_cond, include}]}]}.
+{sys, [
+	{lib_dirs, ["deps"]},
+	{rel, "just", "1", [
+		kernel,
+		stdlib,
+		sasl,
+		lager,
+		mnesia,
+		snmp,
+		os_mon,
+		common_lib,
+		amqp_client,
+		gproc,
+		just_mini
+	]},
+	{rel, "start_clean", "", [
+		kernel,
+		stdlib
+	]},
+	{boot_rel, "just"},
+	{profile, embedded},
+	{excl_sys_filters, ["^bin/.*", "^erts.*/bin/(dialyzer|typer)"]},
+	{excl_archive_filters, [".*"]},
+	{app, cecho, [{incl_cond, include}]},
+	{app, entop, [{incl_cond, include}]},
+	{app, eper, [{incl_cond, include}]},
+	{app, sync, [{incl_cond, include}]}
+]}.
 
 {target_dir, "just_mini"}.
 
 {overlay_vars, "vars.config"}.
 
-{overlay,
- [{mkdir, "etc"},
-  {mkdir, "data/gateways"},
-  {mkdir, "data/snmp"},
-  {mkdir, "log/sasl"},
-  {mkdir, "log/smpp"},
-  {mkdir, "mibs"},
-  {copy, "deps/just_mini/mibs/JUST-MIB.mib", "mibs"},
-  {copy, "files/erl", "{{erts_vsn}}/bin/erl"},
-  {copy, "files/nodetool", "{{erts_vsn}}/bin/nodetool"},
-  {copy, "files/snmp", "etc/snmp"},
-  {copy, "files/mnesia", "data"},
-  {template, "files/app.config", "etc/app.config"},
-  {template, "files/vm.args", "etc/vm.args"},
-  {template, "files/just", "bin/just"}]}.
+{overlay, [
+	{mkdir, "etc"},
+	{mkdir, "data/gateways"},
+	{mkdir, "data/snmp"},
+	{mkdir, "log/sasl"},
+	{mkdir, "log/smpp"},
+	{mkdir, "mibs"},
+	{copy, "deps/just_mini/mibs/JUST-MIB.mib", "mibs"},
+	{copy, "files/erl", "{{erts_vsn}}/bin/erl"},
+	{copy, "files/nodetool", "{{erts_vsn}}/bin/nodetool"},
+	{copy, "files/snmp", "etc/snmp"},
+	{copy, "files/mnesia", "data"},
+	{template, "files/app.config", "etc/app.config"},
+	{template, "files/vm.args", "etc/vm.args"},
+	{template, "files/just", "bin/just"}
+]}.
