Add develop mode

--- a/reltool.config
+++ b/reltool.config
@@ -13,6 +13,20 @@
 		gproc,
 		just_mini
 	]},
+	{rel, "develop", "", [
+		kernel,
+		stdlib,
+		sasl,
+		lager,
+		mnesia,
+		snmp,
+		os_mon,
+		common_lib,
+		amqp_client,
+		gproc,
+		sync,
+		just_mini
+	]},
 	{rel, "start_clean", "", [
 		kernel,
 		stdlib
@@ -24,6 +38,7 @@
 	{app, cecho, [{incl_cond, include}]},
 	{app, entop, [{incl_cond, include}]},
 	{app, eper, [{incl_cond, include}]},
+	{app, runtime_tools, [{incl_cond, include}]},
 	{app, sync, [{incl_cond, include}]}
 ]}.
 
