Add queue_fabric support

--- a/rebar.config
+++ b/rebar.config
@@ -3,7 +3,7 @@
 	debug_info
 ]}.
 {deps, [
-	{just_mini, "0.*", {git, "git://github.com/PowerMeMobile/just_mini.git", {branch, "master"}}},
+	{just_mini, "0.*", {git, "git://github.com/PowerMeMobile/just_mini.git", {branch, "feature/as_queue_fabric"}}},
 	{entop, "0.0.1", {git, "git://github.com/mazenharake/entop.git", {branch, "master"}}},
 	{eper, ".*", {git, "git://github.com/massemanet/eper.git", {branch, "master"}}},
 	{sync, ".*", {git, "https://github.com/ten0s/sync.git", {branch, "dk_support_release"}}}
