Refine queue names

--- a/files/app.config
+++ b/files/app.config
@@ -7,10 +7,11 @@
    {amqp_host, "localhost"},
    {amqp_port, 5672},
    {amqp_qos, 1000},
-   {request_queue_prefix, "pmm.just.gateway."},
-   {response_queue, "pmm.mmwl.response.sms"},
-   {message_queue, "pmm.mmwl.incoming.sms"},
-   {receipt_queue, "pmm.mmwl.receipt.sms"},
+   {request_queue_prefix, "pmm.alley.just.gateway."},
+   {control_queue,        "pmm.alley.just.control"},
+   {response_queue,       "pmm.alley.kelly.response.sms"},
+   {incoming_queue,       "pmm.alley.kelly.incoming.sms"},
+   {receipt_queue,        "pmm.alley.kelly.receipt.sms"},
    {file_log_dir, "{{file_log_dir}}"},
    {file_log_size, 5000000},
    {replies_deadline, 120}]},
