--- a/files/app.config
+++ b/files/app.config
@@ -21,8 +21,9 @@
   [{handlers,
     [{lager_console_backend, info},
      {lager_file_backend,
-      [{"log/error.log", error, 10485760, "$D0", 5},
-       {"log/console.log", info, 10485760, "$D0", 5}]}]},
+      [{"log/debug.log", debug, 10485760, "$D0", 5},
+       {"log/error.log", error, 10485760, "$D0", 5},
+       {"log/info.log", info, 10485760, "$D0", 5}]}]},
    {crash_log, "log/crash.log"},
    {crash_log_msg_size, 65536},
    {crash_log_size, 10485760},
