--- a/reltool.config
+++ b/reltool.config
@@ -35,11 +35,10 @@
     {profile, embedded},
     {excl_sys_filters, ["^bin/.*", "^erts.*/bin/(dialyzer|typer)"]},
     {excl_archive_filters, [".*"]},
-    {app, cecho, [{incl_cond, include}]},
+    {app, runtime_tools, [{incl_cond, include}]},
     {app, entop, [{incl_cond, include}]},
     {app, eper, [{incl_cond, include}]},
-    {app, runtime_tools, [{incl_cond, include}]},
-    {app, sync, [{incl_cond, include}]}
+    {app, recon, [{incl_cond, include}]}
 ]}.
 
 {target_dir, "just_mini"}.
