--- a/rebar.config
+++ b/rebar.config
@@ -6,6 +6,5 @@
     {just_mini, "0.*", {git, "git://github.com/PowerMeMobile/just_mini.git", {tag, "2.1.0"}}},
     {entop, "0.0.1", {git, "git://github.com/mazenharake/entop.git", {branch, "master"}}},
     {eper, ".*", {git, "git://github.com/massemanet/eper.git", {branch, "master"}}},
-    {recon, ".*", {git, "git://github.com/ferd/recon.git", {tag, "2.2.0"}}},
-    {sync, ".*", {git, "https://github.com/ten0s/sync.git", {branch, "dk_support_release"}}}
+    {recon, ".*", {git, "git://github.com/ferd/recon.git", {tag, "2.2.0"}}}
 ]}.
